Work-around for nested ICU plural syntax

--- a/translations/items+intl-icu.fr.xlf
+++ b/translations/items+intl-icu.fr.xlf
@@ -9333,7 +9333,7 @@
                 other {# pts attaque}
               }
             }
-            other {# pts attaque}
+            other { {watchpoint__copy} pts attaque}
           }
         </target>
       </segment>
