--- a/translations/items+intl-icu.fr.xlf
+++ b/translations/items+intl-icu.fr.xlf
@@ -9383,7 +9383,6 @@
       <notes>
         <note category="german">Du stellst den(die) {item} bei dir daheim auf. Zugegeben, es sieht nicht gerade ästhetisch aus, aber mal ganz ehrlich: Wen kümmert das?{hr}Dieser Gegenstand erweitert deine Truhe dauerhaft um soviele freie Plätze: &lt;strong&gt;{home_storage}&lt;/strong&gt;.</note>
         <note category="from">db://AffectMessage</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Du stellst den(die) {item} bei dir daheim auf. Zugegeben, es sieht nicht gerade ästhetisch aus, aber mal ganz ehrlich: Wen kümmert das?{hr}Dieser Gegenstand erweitert deine Truhe dauerhaft um soviele freie Plätze: &lt;strong&gt;{home_storage}&lt;/strong&gt;.</source>
@@ -9397,6 +9396,28 @@
               }
             }
             other { Cet objet vous permet d'ajouter <strong>{home_storage__copy} emplacement(s)</strong> définitivement à votre coffre.}
+          }
+        ]]></target>
+      </segment>
+    </unit>
+    <unit id="Oww.AzB">
+      <notes>
+        <note category="german">Sorgfältig befestigst du bei dir daheim ein(e) {item}. So und das hält jetzt, so viel steht schon mal fest.{hr}Dieser Gegenstand gibt deinem Haus permament &lt;strong&gt;{home_defense} zusätzliche Verteidigungspunkt(e).&lt;/strong&gt;</note>
+        <note category="from">db://AffectMessage</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Sorgfältig befestigst du bei dir daheim ein(e) {item}. So und das hält jetzt, so viel steht schon mal fest.{hr}Dieser Gegenstand gibt deinem Haus permament &lt;strong&gt;{home_defense} zusätzliche Verteidigungspunkt(e).&lt;/strong&gt;</source>
+        <target><![CDATA[
+          Vous fixez solidement {item} chez vous. Ça n'est pas très esthétique. Mais franchement... qui s'en occupe ?{hr}
+          {ref__icu, select,
+            on {
+              {home_defense, plural,
+                =1 {Cet objet vous permet d'ajouter <strong># point de défense</strong> définitivement à votre habitation.}
+                other {Cet objet vous permet d'ajouter <strong># points de défense</strong> définitivement à votre habitation.}
+              }
+            }
+            other { Cet objet vous permet d'ajouter <strong>{home_defense__copy} point(s) de défense</strong> définitivement à votre habitation.}
           }
         ]]></target>
       </segment>
