--- a/translations/soul+intl-icu.en.xlf
+++ b/translations/soul+intl-icu.en.xlf
@@ -3781,5 +3781,27 @@
         ]]></target>
       </segment>
     </unit>
+    <unit id="J979vsp" name="Moderationslinks in neuem Fenster öffnen">
+      <notes>
+        <note category="german">Moderationslinks in neuem Fenster öffnen</note>
+        <note category="from">twig:///templates/ajax/soul/settings.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Moderationslinks in neuem Fenster öffnen</source>
+        <target>Open moderation links in the same window</target>
+      </segment>
+    </unit>
+    <unit id="rDqFWB2" name="Moderationseinstellungen">
+      <notes>
+        <note category="german">Moderationseinstellungen</note>
+        <note category="from">twig:///templates/ajax/soul/settings.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Moderationseinstellungen</source>
+        <target>Moderation settings</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
