--- a/translations/admin+intl-icu.en.xlf
+++ b/translations/admin+intl-icu.en.xlf
@@ -4019,5 +4019,15 @@
         <target>Repair town</target>
       </segment>
     </unit>
+    <unit id="qiwbmCe" name="Versteckte Statuseffekte">
+      <notes>
+        <note category="german">Versteckte Statuseffekte</note>
+        <note category="from">twig:///templates/ajax/game/game.html.twig</note>
+      </notes>
+      <segment>
+        <source>Versteckte Statuseffekte</source>
+        <target>Hidden statuses</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
