--- a/translations/items+intl-icu.de.xlf
+++ b/translations/items+intl-icu.de.xlf
@@ -5683,5 +5683,11 @@
         <target><![CDATA[Sorgfältig befestigst du bei dir daheim ein(e) {item}. So und das hält jetzt, so viel steht schon mal fest.{hr}Dieser Gegenstand gibt deinem Haus permament <strong>{home_defense} zusätzliche Verteidigungspunkt(e).</strong>]]></target>
       </segment>
     </unit>
+    <unit id="H.4hGj8" name="Du hast bereits volle AP.">
+      <segment>
+        <source>Du hast bereits volle AP.</source>
+        <target>Du hast bereits volle AP.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
