--- a/translations/buildings+intl-icu.fr.xlf
+++ b/translations/buildings+intl-icu.fr.xlf
@@ -1370,7 +1370,7 @@
       </notes>
       <segment>
         <source>Wachturm</source>
-        <target>Tour de Guet</target>
+        <target>Tour de guet</target>
       </segment>
     </unit>
     <unit id="Sy.Q4GU">
@@ -1380,7 +1380,7 @@
       </notes>
       <segment>
         <source>Erspäht jeden Morgen alle Zombies, die sich im Umkreis von 3km um die Stadt aufhalten.</source>
-        <target>Détecte chaque matin tous les zombies à 3 km de la ville.</target>
+        <target>Chaque matin, détecte tous les zombies à 3 km de la ville.</target>
       </segment>
     </unit>
     <unit id="NZeNsxy">
@@ -1390,7 +1390,7 @@
       </notes>
       <segment>
         <source>Erspäht jeden Morgen alle Zombies, die sich im Umkreis von 6km um die Stadt aufhalten.</source>
-        <target>Détecte chaque matin tous les zombies à 6 km de la ville.</target>
+        <target>Chaque matin, détecte tous les zombies à 6 km de la ville.</target>
       </segment>
     </unit>
     <unit id="wGZu2sa">
@@ -1400,7 +1400,7 @@
       </notes>
       <segment>
         <source>Erspäht jeden Morgen alle Zombies, die sich im Umkreis von 10km um die Stadt aufhalten.</source>
-        <target>Détecte chaque matin tous les zombies à 10 km de la ville.</target>
+        <target>Chaque matin, détecte tous les zombies à 10 km de la ville.</target>
       </segment>
     </unit>
     <unit id="h1r5RdI">
@@ -1410,7 +1410,7 @@
       </notes>
       <segment>
         <source>Erspäht jeden Morgen alle Zombies, die sich im Umkreis von 10km um die Stadt aufhalten. Bürger im Umkreis von 1km um die Stadt können ohne AP-Verbrauch die Stadt betreten.</source>
-        <target>Détecte chaque matin tous les zombies à 10 km de la ville et permet aux citoyens à 1 km de la ville de rentrer gratuitement.</target>
+        <target>Détecte tous les zombies à 10 km de la ville et permet aux citoyens à 1 km de la ville de rentrer gratuitement.</target>
       </segment>
     </unit>
     <unit id="N0sOdNf">
@@ -1420,7 +1420,7 @@
       </notes>
       <segment>
         <source>Erspäht jeden Morgen alle Zombies, die sich im Umkreis von 10km um die Stadt aufhalten. Bürger im Umkreis von 2km um die Stadt können ohne AP-Verbrauch die Stadt betreten.</source>
-        <target>Détecte chaque matin tous les zombies à 10 km de la ville et permet aux citoyens à 2 km de la ville de rentrer gratuitement</target>
+        <target>Détecte tous les zombies à 10 km de la ville et permet aux citoyens à 2 km de la ville de rentrer gratuitement.</target>
       </segment>
     </unit>
     <unit id="2B9BF5F" name="Bohrturm">
