Work-around for nested ICU plural syntax (2)
(cherry picked from commit 4c40384fcaeec0aaa5d9eeaea9cecd02cf3567fe)

--- a/translations/items+intl-icu.en.xlf
+++ b/translations/items+intl-icu.en.xlf
@@ -9443,12 +9443,11 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
             on {
               {watchpoint, plural,
                 =-1 {# attack pt}
-                =0 {# attack pt}
                 =1 {# attack pt}
                 other {# attack pts}
               }
             }
-            other {# attack pts}
+            other {{watchpoint__copy} attack pts}
           }
         </target>
       </segment>
